First tries at the Zettelkasten

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -4,7 +4,7 @@
     "theme",
     "mark fixer"
   ],
-  "translucency": false,
+  "translucency": true,
   "theme": "obsidian",
   "baseFontSize": 19,
   "textFontFamily": ""
