--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,21 +4,21 @@
     "type": "split",
     "children": [
       {
-        "id": "4d06d5df7bfcdd8a",
+        "id": "9759815986ee4ee1",
         "type": "leaf",
         "pane-relief:history-v1": {
           "pos": 0,
           "stack": [
             {
-              "leaf": "4d06d5df7bfcdd8a",
+              "leaf": "9759815986ee4ee1",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/Marxism (P).md\",\"mode\":\"source\",\"source\":true}}",
-              "eState": "{}"
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/1 Fleeting Notes/2022-08-29 Science (F).md\",\"mode\":\"source\",\"source\":true}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":7,\"ch\":38},\"to\":{\"line\":7,\"ch\":66}}}"
             },
             {
-              "leaf": "4d06d5df7bfcdd8a",
+              "leaf": "9759815986ee4ee1",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/2 Literature Notes/Aboriginal Worldview (L).md\",\"mode\":\"source\",\"source\":true}}",
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/Untitled.md\",\"mode\":\"source\",\"source\":true}}",
               "eState": "{}"
             }
           ]
@@ -26,7 +26,30 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes/3 Permanent Notes/Marxism (P).md",
+            "file": "notes/1 Fleeting Notes/2022-08-29 Science (F).md",
+            "mode": "source",
+            "source": true
+          }
+        }
+      },
+      {
+        "id": "bd6b0de4b45fe871",
+        "type": "leaf",
+        "pane-relief:history-v1": {
+          "pos": 0,
+          "stack": [
+            {
+              "leaf": "bd6b0de4b45fe871",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/Alpha Decay (L).md\",\"mode\":\"source\",\"source\":true}}",
+              "eState": "{}"
+            }
+          ]
+        },
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "notes/Alpha Decay (L).md",
             "mode": "source",
             "source": true
           }
@@ -111,7 +134,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "notes/3 Permanent Notes/Marxism (P).md",
+                "file": "notes/Alpha Decay (L).md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -132,7 +155,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "notes/3 Permanent Notes/Marxism (P).md",
+                "file": "notes/Alpha Decay (L).md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -154,7 +177,7 @@
             "state": {
               "type": "localgraph",
               "state": {
-                "file": "notes/3 Permanent Notes/Marxism (P).md",
+                "file": "notes/Alpha Decay (L).md",
                 "options": {
                   "collapse-filter": false,
                   "search": "",
@@ -211,20 +234,20 @@
     "direction": "horizontal",
     "width": 457.5
   },
-  "active": "4d06d5df7bfcdd8a",
+  "active": "bd6b0de4b45fe871",
   "ophidian:layout-settings": {
     "pane-relief:focus-lock": true
   },
   "lastOpenFiles": [
-    "notes/2 Literature Notes/Aboriginal Worldview (L).md",
-    "notes/3 Permanent Notes/Marxism (P).md",
+    "notes/1 Fleeting Notes/2022-08-29 Science (F).md",
+    "notes/Alpha Decay (L).md",
+    "notes/Untitled.md",
     "notes/2 Literature Notes/Indigenous Philosophies (L).md",
-    "notes/3 Permanent Notes/Indigenous Philosophies (P).md",
+    "notes/3 Permanent Notes/Marxism (P).md",
     "notes/2 Literature Notes/Marxism (L).md",
-    "README.md",
-    "notes/archive/Catalyst.md",
-    "notes/archive/Alkane.md",
-    "notes/archive/Aboriginal Spirituality.md",
-    "notes/archive/Organic Chemistry.md"
+    "notes/3 Permanent Notes/Indigenous Philosophies (P).md",
+    "notes/Aboriginal Worldview (P).md",
+    "notes/2 Literature Notes/Aboriginal Worldview (L).md",
+    "README.md"
   ]
 }
