--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,65 +4,52 @@
     "type": "split",
     "children": [
       {
-        "id": "6493088d04644cf0",
+        "id": "da99a9e12e145040",
         "type": "leaf",
         "pane-relief:history-v1": {
-          "pos": 0,
+          "pos": 1,
           "stack": [
             {
-              "leaf": "6493088d04644cf0",
+              "leaf": "da99a9e12e145040",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/4,3a - Why larger particles are less penetrative (P).md\",\"mode\":\"source\",\"source\":true}}",
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/2 Literature Notes/Marxism and Metamorphosis (L).md\",\"mode\":\"preview\",\"source\":true}}",
               "eState": "{}"
             },
             {
-              "leaf": "6493088d04644cf0",
+              "leaf": "da99a9e12e145040",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/4 - Alpha Decay (P).md\",\"mode\":\"source\",\"source\":true}}",
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/6 - Marxism (P).md\",\"mode\":\"source\",\"source\":true}}",
               "eState": "{}"
-            },
-            {
-              "leaf": "6493088d04644cf0",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/4,2a - Beta Decay (P).md\",\"mode\":\"source\",\"source\":true}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
-            },
-            {
-              "leaf": "6493088d04644cf0",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/4,2b - Beta Decay Unlimited (P).md\",\"mode\":\"source\",\"source\":true}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":9,\"ch\":0},\"to\":{\"line\":9,\"ch\":0}}}"
-            },
-            {
-              "leaf": "6493088d04644cf0",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/4,2a - Beta Decay (P).md\",\"mode\":\"source\",\"source\":true}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":5,\"ch\":46},\"to\":{\"line\":5,\"ch\":46}}}"
-            },
-            {
-              "leaf": "6493088d04644cf0",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/4 - Alpha Decay (P).md\",\"mode\":\"source\",\"source\":true}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":18,\"ch\":0},\"to\":{\"line\":18,\"ch\":0}}}"
-            },
-            {
-              "leaf": "6493088d04644cf0",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/4,2a - Beta Decay (P).md\",\"mode\":\"source\",\"source\":true}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":11,\"ch\":7},\"to\":{\"line\":11,\"ch\":7}}}"
-            },
-            {
-              "leaf": "6493088d04644cf0",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/4 - Alpha Decay (P).md\",\"mode\":\"source\",\"source\":true}}",
-              "eState": "{\"cursor\":{\"from\":{\"line\":10,\"ch\":0},\"to\":{\"line\":10,\"ch\":0}}}"
             }
           ]
         },
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes/3 Permanent Notes/4,3a - Why larger particles are less penetrative (P).md",
+            "file": "notes/3 Permanent Notes/6 - Marxism (P).md",
+            "mode": "source",
+            "source": true
+          }
+        }
+      },
+      {
+        "id": "e90a726e056faf9f",
+        "type": "leaf",
+        "pane-relief:history-v1": {
+          "pos": 0,
+          "stack": [
+            {
+              "leaf": "e90a726e056faf9f",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/2 Literature Notes/Marxism 2 (L).md\",\"mode\":\"source\",\"source\":true}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":6,\"ch\":23},\"to\":{\"line\":6,\"ch\":74}}}"
+            }
+          ]
+        },
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "notes/2 Literature Notes/Marxism 2 (L).md",
             "mode": "source",
             "source": true
           }
@@ -147,7 +134,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "notes/3 Permanent Notes/4,3a - Why larger particles are less penetrative (P).md",
+                "file": "notes/3 Permanent Notes/6 - Marxism (P).md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -168,7 +155,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "notes/3 Permanent Notes/4,3a - Why larger particles are less penetrative (P).md",
+                "file": "notes/3 Permanent Notes/6 - Marxism (P).md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -190,7 +177,7 @@
             "state": {
               "type": "localgraph",
               "state": {
-                "file": "notes/3 Permanent Notes/4,3a - Why larger particles are less penetrative (P).md",
+                "file": "notes/3 Permanent Notes/6 - Marxism (P).md",
                 "options": {
                   "collapse-filter": false,
                   "search": "",
@@ -247,20 +234,20 @@
     "direction": "horizontal",
     "width": 457.5
   },
-  "active": "6493088d04644cf0",
+  "active": "da99a9e12e145040",
   "ophidian:layout-settings": {
     "pane-relief:focus-lock": true
   },
   "lastOpenFiles": [
+    "index.md",
+    "notes/3 Permanent Notes/6 - Marxism (P).md",
+    "notes/2 Literature Notes/Marxism 2 (L).md",
+    "notes/2 Literature Notes/Marxism and Metamorphosis (L).md",
+    "notes/archive/Metamorphosis & Marx.md",
+    "notes/3 Permanent Notes/5 - Marxism (P).md",
     "notes/3 Permanent Notes/4 - Alpha Decay (P).md",
+    "notes/3 Permanent Notes/4,3a - Why larger particles are less penetrative (P).md",
     "notes/3 Permanent Notes/4,2a - Beta Decay (P).md",
-    "notes/2 Literature Notes/Beta Decay (L).md",
-    "notes/3 Permanent Notes/4,2b - Beta Decay Unlimited (P).md",
-    "notes/2 Literature Notes/Alpha Decay (L).md",
-    "notes/1 Fleeting Notes/2022-08-30 Science (F).md",
-    "notes/2 Literature Notes/Aboriginal Worldview (L).md",
-    "notes/1 Fleeting Notes/2022-08-29 Science (F).md",
-    "notes/3 Permanent Notes/4,a - Why does it release alpha particles.md",
-    "notes/2 Literature Notes/Teaching and Aboriginal Languages (L).md"
+    "notes/2 Literature Notes/Beta Decay (L).md"
   ]
 }
