--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,27 +4,27 @@
     "type": "split",
     "children": [
       {
-        "id": "71b0e13fd2a866fb",
+        "id": "2850c4ecf2d42d1e",
         "type": "leaf",
         "pane-relief:history-v1": {
           "pos": 0,
           "stack": [
             {
-              "leaf": "71b0e13fd2a866fb",
+              "leaf": "2850c4ecf2d42d1e",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/2 Literature Notes/Teaching and Aboriginal (L).md\",\"mode\":\"preview\",\"source\":true}}",
-              "eState": "{\"scroll\":0}"
-            },
-            {
-              "leaf": "71b0e13fd2a866fb",
-              "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/4 - Alpha Decay (P).md\",\"mode\":\"source\",\"source\":true}}",
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/Mass Defect & Binding Energy.md\",\"mode\":\"preview\",\"source\":true}}",
               "eState": "{}"
             },
             {
-              "leaf": "71b0e13fd2a866fb",
+              "leaf": "2850c4ecf2d42d1e",
               "group": null,
-              "state": "{\"type\":\"graph\",\"state\":{}}",
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/1 Fleeting Notes/2022-09-05 - Science.md\",\"mode\":\"source\",\"source\":true}}",
+              "eState": "{}"
+            },
+            {
+              "leaf": "2850c4ecf2d42d1e",
+              "group": null,
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/1 Fleeting Notes/Kafka Personal Life (F).md\",\"mode\":\"source\",\"source\":true}}",
               "eState": "{}"
             }
           ]
@@ -32,30 +32,30 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes/2 Literature Notes/Teaching and Aboriginal (L).md",
+            "file": "notes/Mass Defect & Binding Energy.md",
             "mode": "preview",
             "source": true
           }
         }
       },
       {
-        "id": "0d112d2f1c3c8f1d",
+        "id": "b9f679edd3e06670",
         "type": "leaf",
         "pane-relief:history-v1": {
           "pos": 0,
           "stack": [
             {
-              "leaf": "0d112d2f1c3c8f1d",
+              "leaf": "b9f679edd3e06670",
               "group": null,
-              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/3 Permanent Notes/3,c - Teaching and Aboriginal (P).md\",\"mode\":\"source\",\"source\":true}}",
-              "eState": "{\"scroll\":0}"
+              "state": "{\"type\":\"markdown\",\"state\":{\"file\":\"notes/4,5b - Mass Defect & Binding Energy.md\",\"mode\":\"source\",\"source\":true}}",
+              "eState": "{\"cursor\":{\"from\":{\"line\":0,\"ch\":0},\"to\":{\"line\":0,\"ch\":0}}}"
             }
           ]
         },
         "state": {
           "type": "markdown",
           "state": {
-            "file": "notes/3 Permanent Notes/3,c - Teaching and Aboriginal (P).md",
+            "file": "notes/4,5b - Mass Defect & Binding Energy.md",
             "mode": "source",
             "source": true
           }
@@ -94,7 +94,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "pedagogies",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -103,7 +103,8 @@
               }
             }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
@@ -140,7 +141,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "notes/3 Permanent Notes/3,c - Teaching and Aboriginal (P).md",
+                "file": "notes/4,5b - Mass Defect & Binding Energy.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -161,7 +162,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "notes/3 Permanent Notes/3,c - Teaching and Aboriginal (P).md",
+                "file": "notes/4,5b - Mass Defect & Binding Energy.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -182,6 +183,10 @@
           {
             "id": "a7258a853a197e96",
             "type": "leaf",
+            "pane-relief:history-v1": {
+              "pos": 0,
+              "stack": []
+            },
             "state": {
               "type": "graph-analysis",
               "state": {}
@@ -203,7 +208,7 @@
             "state": {
               "type": "localgraph",
               "state": {
-                "file": "notes/3 Permanent Notes/3,c - Teaching and Aboriginal (P).md",
+                "file": "notes/4,5b - Mass Defect & Binding Energy.md",
                 "options": {
                   "collapse-filter": false,
                   "search": "-path:archive -path:Wallpaper",
@@ -272,22 +277,23 @@
       }
     ],
     "direction": "horizontal",
-    "width": 457.5
+    "width": 457.5,
+    "collapsed": true
   },
-  "active": "0d112d2f1c3c8f1d",
+  "active": "b9f679edd3e06670",
   "ophidian:layout-settings": {
     "pane-relief:focus-lock": true
   },
   "lastOpenFiles": [
-    "notes/2 Literature Notes/Teaching and Aboriginal (L).md",
-    "notes/3 Permanent Notes/3,c - Teaching and Aboriginal (P).md",
-    "notes/3 Permanent Notes/4 - Alpha Decay (P).md",
+    "notes/Mass Defect & Binding Energy.md",
+    "notes/4,5b - Mass Defect & Binding Energy.md",
+    "notes/1 Fleeting Notes/2022-09-05 - Science.md",
     "notes/3 Permanent Notes/4,2a,2a - Gamma Decay.md",
-    "notes/3 Permanent Notes/4,2a - Beta Decay (P).md",
-    "notes/3 Permanent Notes/4,2b - Beta Decay Unlimited (P).md",
     "notes/2 Literature Notes/Gamma Decay.md",
-    "notes/5,b - Metamorphosis and Kafka.md",
-    "notes/3 Permanent Notes/4,4a - After Decay (P).md",
-    "notes/2 Literature Notes/Beta Decay (L).md"
+    "notes/1 Fleeting Notes/Kafka Personal Life (F).md",
+    "notes/1 Fleeting Notes/Helium Stability (F).md",
+    "notes/1 Fleeting Notes/2022-08-30 Science (F).md",
+    "notes/2 Literature Notes/Teaching and Aboriginal (L).md",
+    "notes/3 Permanent Notes/3,c - Teaching and Aboriginal (P).md"
   ]
 }
